testing/tests/ui/blocks_below_top_level.stderr
error: the previous template error derives from
 --> tests/ui/blocks_below_top_level.rs:4:12
  |
4 | #[template(source = r#"
  |            ^^^^^^

error: the previous template error derives from
  --> tests/ui/blocks_below_top_level.rs:12:12
   |
12 | #[template(source = r#"
   |            ^^^^^^

error: the previous template error derives from
  --> tests/ui/blocks_below_top_level.rs:21:12
   |
21 | #[template(source = r#"
   |            ^^^^^^
